Import module on save; make modules point to original trees if applicable * Make the editor add (or overwrite) a module corresponding to the tree that was saved * Add a component to open the tree corresponding to a module if the path exists, located in the "Edit Node" modal. * Make a module's properties and title read-only in the "Edit Node" modal. * Remove the "module" type from the "Add Node" modal (modules can be added by opening or saving a tree).

--- a/src/app/common/notification/modal-notifications.html
+++ b/src/app/common/notification/modal-notifications.html
@@ -14,7 +14,7 @@
             {{notification.message}}
           </li> -->
         </ul>
-        <div class="empty" ng-show="pastNotifications.length == 0">
+        <div class="light-text" ng-show="pastNotifications.length == 0">
           There are no past notifications to show.
         </div>
       </div>
