--- a/src/app/common/textInput/textInput.html
+++ b/src/app/common/textInput/textInput.html
@@ -1,7 +1,8 @@
 <input type="text" class="monospace inline" ng-model="value" ng-change="onChange(); updateAlert()"
        placeholder="{{placeholder}}"
        ng-class="{expandable: expandable, 'border-warning': inputAlert.level == 'warning',
-                  'border-error': inputAlert.level == 'error'}">
+                  'border-error': inputAlert.level == 'error'}"
+       ng-readonly="readOnly">
 <a href="#" class="button secondary inline text-expand" title="Show More" ng-click="expandText()" ng-show="expandable">
   ...
 </a>
