Improve synchronization of modules with trees * Disallow renaming trees to other opened trees or existing node definitions * Make loading a project or closing the window warn about unsaved trees before unsaved nodes. * Saving a tree properly synchronizes its corresponding module. * "Save As..." appends a number to the tree's name to prevent naming conflicts. * Fix a pesky warning in editor.css related to nonstandard "appearance" properties. * Fix isSaved() not working properly with save locations that contain commands affecting only non-action types.

--- a/src/app/property/property-panel.html
+++ b/src/app/property/property-panel.html
@@ -28,8 +28,12 @@
 
       <div class="row">
         <label>Title</label>
+        <b3-text-input id="root-title" onblur="element(this).editProperties(this);" on-change="markForChange()"
+                       placeholder="title" value="title" ng-if="block.type == 'root'" formatter="inspectTitle(input)">
+        </b3-text-input>
         <input id="title" type="text" onchange="element(this).editProperties(this)"
-               onkeyup="element(this).markForChange(this)" placeholder="title">
+               onkeyup="element(this).markForChange(this)" placeholder="title" ng-value="title"
+               ng-if="block.type != 'root'">
       </div>
 
       <div class="row">
