--- a/src/app/common/textInput/textInput.html
+++ b/src/app/common/textInput/textInput.html
@@ -1,13 +1,14 @@
 <input type="text" class="monospace inline" ng-model="value" ng-change="onChange(); updateAlert()"
        placeholder="{{placeholder}}"
        ng-class="{expandable: expandable, 'border-warning': inputAlert.level == 'warning',
-                  'border-error': inputAlert.level == 'error'}"
+                  'border-error': inputAlert.level == 'error', 'border-success': inputAlert.level == 'success'}"
        ng-readonly="readOnly">
 <a href="#" class="button secondary inline text-expand" title="Show More" ng-click="expandText()" ng-show="expandable">
   ...
 </a>
 <br>
-<span ng-class="{expandable: expandable, 'balloon-warning': inputAlert.level == 'warning', 'balloon-error': inputAlert.level == 'error'}">
+<span ng-class="{expandable: expandable, 'balloon-warning': inputAlert.level == 'warning', 
+                 'balloon-error': inputAlert.level == 'error', 'balloon-success': inputAlert.level == 'success'}">
   {{inputAlert.message}}
 </span>
 <!-- <button ng-click="getValue()">Show Value</button> -->
